[project]
name = "lg-code-mwe"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "langgraph",
  "langgraph-cli[inmem]",
  "langchain-core",
  "langchain-openai",
  "python-dotenv",
  "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
